--- a/README
+++ b/README
@@ -2,7 +2,7 @@ OCTOBER 2020 UPDATE:
 
 I completely rewrote the game several times, and finally I think I've found a version that's clean, concise, and scalable.
 
-Only 3 files have been updated to version 6. Ignore the other files. 
+All files from outdated versions have been deleted.
 
 Why are they there? Because I don't know how to use GitHub very well and I don't know how to delete stuff.
 
